--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "@rails/webpacker": "3.5",
     "actioncable": "^5.2.2-1",
     "babel-preset-react": "^6.24.1",
-    "bulma": "0.7.4",
-    "jquery": "",
+    "bulma": "0.7.5",
+    "jquery": "*",
     "moment": "2.24.0",
     "prop-types": "^15.7.2",
     "ramda": "0.26.1",
